--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
