--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "swiper": "^9.2.4",
     "vue": "^3.2.47",
     "vue-router": "^4.0.0-0"
   },
@@ -19,6 +20,7 @@
     "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0",
-    "vite-plugin-svg-icons": "^2.0.1"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "sass": "^1.62.0"
   }
 }
